fixed alignment issue when trading with financial vrtc account

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -638,7 +638,7 @@
     }
     #symbol_tip {
         cursor: pointer;
-        padding: 5px 10px;
+        padding: 5px;
         position: relative;
         text-decoration: none;
         font-weight: normal;
